# system_dashboard

./: .gitignore  README.md  main.py  pyproject.toml
homography/: akarenga.txt  chosha.txt  kokusaibashi.txt  worldporter.txt
vis_tool/: dashboard.py
vis_tool/components/: focus.py  graph.py  risk.py  risk_vis.py  trajectory.py  utils.py
vis_tool/map_data/yokohama_2020508/: map_draw_style.yaml
vis_tool/map_data/yokohama_2020508/map_config/: akarenga.yaml  chosha.yaml  kokusaibashi.yaml  worldporter.yaml
